tests/diagnostics/catalog/snapshots/ir/IR0012.snap
error[IR0012]: IR_E_DANGLING_REFERENCE
 --> tests/diagnostics/catalog/sources/ir/IR0012.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0012
  = help: keep IR validation diagnostics structured and catalog-backed
